--- a/assets/css/layout/gridSystem.scss
+++ b/assets/css/layout/gridSystem.scss
@@ -5,35 +5,20 @@
   display         : flex;
   flex-flow       : row wrap;
   justify-content : center;
-  margin-bottom   : $gap*2;
-
-  &.row:only-of-type, &:last-child {
-    margin-bottom : 0;
-  }
-
-  main > &:last-of-type {
-    margin-top : rem(90px);
-  }
-
-  //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+  margin          : 0 auto rem(60px) auto;
 
   .row {
-    margin-bottom : rem(120px) * 0.7;
-    &.claim {
-      &:last-of-type {
-      }
-    }
+    margin : 0 auto rem(60px) auto;
+
     &:last-of-type {
       margin-bottom : 0 !important;
     }
   }
-
-  &.overflowX {
-    overflow-x  : auto !important;
-    display     : block;
-    white-space : nowrap;
+  &.title {
+    margin-bottom :0;
   }
 
+  //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
   @include breakpoint(xs) {
     justify-content : flex-start;
     .row {
@@ -43,7 +28,6 @@
   @include breakpoint(md) {
     display   : flex;
     flex-flow : row wrap;
-    margin    : 0 auto $gap*6 auto;
     width     : 100%;
     max-width : $template-width;
 
@@ -54,10 +38,14 @@
         margin-bottom : 0 !important;
       }
     }
+    .row {
+      margin : 0 auto rem(120px) auto;
+      .col {
+        margin-bottom : 0;
+      }
+    }
   }
-  @include breakpoint(lg) {
-    overflow-x : hidden;
-  }
+
 }
 //=================================================================================================================================================================================================
 .fullRow {
@@ -68,7 +56,7 @@
   padding-left  : rem($gap);
   padding-right : rem($gap);
   width         : 100%;
-  margin-bottom : rem($gap * 1.5);
+  margin-bottom : $gap*2;
 
   & p:only-of-type, &:only-of-type {
     margin-bottom : 0;
@@ -78,10 +66,15 @@
     display         : flex;
     flex-flow       : row nowrap;
     justify-content : center;
+    justify-items   : center;
     align-items     : center;
-  }
-  //-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
+    align-content   : center;
 
+    > img {
+      max-height : rem(100px);
+      width      : auto;
+    }
+  }
 }
 //=================================================================================================================================================================================================
 @include grid-columns(default);
