--- a/assets/css/slick.scss
+++ b/assets/css/slick.scss
@@ -2,6 +2,7 @@
 /*======================================================================================================================
                                                          Slick
 ============================================================|=========================================================*/
+// test
 .slick-slider {
   position                    : relative;
   display                     : block;
