--- a/assets/css/config.scss
+++ b/assets/css/config.scss
@@ -1,51 +1,10 @@
 @import 'layout/functions';
-//----------------------------------------------------- Typography -----------------------------------------------------
+@import 'layout/breakpoints';
+@import 'layout/mixins';
 
-$main-font : 'Roboto', sans-serif;
-$title-font : 'Josefin Sans', sans-serif;
-$icon-font : 'kuehlewebdesignde';
 
-@mixin nav-style {
-  font-family : $main-font;
-  font-size   : 16px;
-  font-weight : 300;
-  @include TextOptimizer;
-}
-//----------------------------------
-$xs : 0.70;
-$sm : 0.75 ;
-$md : 0.85;
-$lg : 0.95;
-$xl : 1;
 
-$font-size : 18px;
-$line-height : 150%;
-$font-margin-bottom : rem(12px);
-//----------------------------------
-//----------------------------------
-$h1-size : rem(32px);
-$h1-line-height : 120%;
-$h1-margin-bottom : rem(20px);
-//----------------------------------
-$h2-size : rem(26px);
-$h2-line-height : 120%;
-$h2-margin-bottom : rem(24px);
-//----------------------------------
-$h3-size : rem(24px);
-$h3-line-height : 120%;
-$h3-margin-bottom : rem(8px);
-//----------------------------------
-$h4-size : 1.1rem;
-$h4-line-height : 150%;
-$h4-margin-bottom : 1rem;
-//----------------------------------
-$h5-size : 1rem;
-$h5-line-height : 150%;
-$h5-margin-bottom : 1rem;
-//----------------------------------
-$h6-size : 0.9rem;
-$h6-line-height : 150%;
-$h6-margin-bottom : 2rem;
+
 //----------------------------------------------------- Color´s --------------------------------------------------------
 $white : #ffffff;
 $black : #000000;
@@ -55,16 +14,17 @@ $silver : #c0c0c0;
 
 $magenta : #ff00ff;
 $color-1 : #82b541;
-$color-2 : #262626;
+$color-2 : #272727;
 $color-3 : #467CC0;
 $color-4 : #162030;
+$color-5 : #1d2a40;
 
 $blue3 : #387f9b;
 $blue4 : #065f82;
 
 $light : rgb(235, 235, 235);
 $medium : #62727e;
-$dark : #23292e;
+$dark : #000000;
 
 $warning : #f0a800;
 $error : #ff2f34;
