--- a/assets/css/layout/navigations.scss
+++ b/assets/css/layout/navigations.scss
@@ -112,9 +112,11 @@ nav.main-nav {
 
         a {
           color           : $dark;
+          font-weight     : 400;
           text-decoration : none;
           display         : flex;
           flex-flow       : row;
+          @include textOptimizer;
 
           &:after {
             content     : '\f0c8';
@@ -189,7 +191,7 @@ nav.mobile-nav {
       a {
         color       : $color-1;
         padding     : rem(18px);
-        font-weight : 300;
+        font-weight : 400;
 
         &:target {
           color : $light;
@@ -242,15 +244,23 @@ nav.mobile-nav {
   }
 }
 //-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
-button.nav-botton {
+button.nav-button {
   border           : none;
   cursor           : pointer;
-  background-color : $color-1;
+  background-color : $color-5;
   color            : $dark;
   font-size        : 1.9rem;
   padding          : 0 $gap;
   flex             : 0 0 20%;
   align-self       : stretch;
+  z-index          : 6000;
+
+  &:before {
+    color       : $light;
+    font-weight : lighter;
+    font-size: rem(28px);
+    @include textOptimizer;
+  }
 
   @include breakpoint(md) {
     display : none;
