--- a/assets/css/layout/content.scss
+++ b/assets/css/layout/content.scss
@@ -176,9 +176,6 @@
 }
 .visuellAnsprechend {
 
-  p {
-    text-align : left;
-  }
   .row {
     &.r1 {
 
@@ -207,7 +204,6 @@
       }
     }
   }
-
   @include breakpoint(md) {
     .row {
       &.r1 {
@@ -844,7 +840,9 @@ ul.leistungen {
 /*=================================================================================================================================================================================================
                                                                                             Global Classes
 ================================================================================================= | =============================================================================================*/
-
+.bold {
+  font-weight: bold;
+}
 .greenBar {
   padding-left : rem($gap*1.5);
 
@@ -890,8 +888,8 @@ ul.leistungen {
   overflow-x : auto;
   display    : block;
   max-width  : 100vw;
-  
+
   @include breakpoint(md) {
-      max-width: $template-width;
+    max-width : $template-width;
   }
 }
