--- a/style.css
+++ b/style.css
@@ -15,14 +15,11 @@ p {
   color: #414141;
   margin-bottom: 0.75rem;
   position: relative;
+  text-align: center;
   -webkit-font-smoothing: antialiased !important;
   text-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.005); }
   p:only-of-type, p:last-of-type, p:last-of-type > .row {
     margin-bottom: 0 !important; }
-  @media (min-width: 40em) {
-    p {
-      font-size: 16px;
-      line-height: 150%; } }
   p strong {
     font-family: "Roboto", sans-serif;
     font-style: italic;
@@ -33,6 +30,13 @@ p {
     color: #272727; }
     p b.light {
       color: #ebebeb; }
+  @media (min-width: 40em) {
+    p {
+      font-size: 16px;
+      line-height: 150%; } }
+  @media (min-width: 47em) {
+    p {
+      text-align: left; } }
 
 /*=================================================================================================================================================================================================
                                                                                             Überschriften
@@ -53,8 +57,8 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0; }
 
 h1 {
-  font-size: 2rem;
-  margin-bottom: 3.5rem;
+  font-size: 1.6875rem;
+  margin-bottom: 5rem;
   color: #272727;
   font-family: "Josefin Sans", sans-serif;
   text-align: center;
@@ -64,35 +68,37 @@ h1 {
     color: #82b541; }
   @media (min-width: 40em) {
     h1 {
-      font-size: 2rem;
-      margin-bottom: 3.75rem; } }
+      font-size: 1.6875rem;
+      margin-bottom: 5rem; } }
   @media (min-width: 47em) {
     h1 {
-      font-size: 2.1875rem;
-      margin-bottom: 4.25rem; } }
+      font-size: 1.875rem;
+      margin-bottom: 5rem; } }
   @media (min-width: 62em) {
     h1 {
       font-size: 2.25rem;
-      margin-bottom: 4.75rem; } }
+      margin-bottom: 5rem; } }
   @media (min-width: 73em) {
     h1 {
       font-size: 2.25rem;
       margin-bottom: 5rem; } }
 
 h2 {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   margin-bottom: 1.75rem;
   color: #272727;
   font-weight: 400;
-  padding: 0 18px; }
+  padding: 0 18px;
+  text-align: center; }
   @media (min-width: 40em) {
     h2 {
-      font-size: 1.75rem;
+      font-size: 1.5rem;
       margin-bottom: 1.875rem; } }
   @media (min-width: 47em) {
     h2 {
-      font-size: 1.875rem;
-      margin-bottom: 2.125rem; } }
+      font-size: 1.75rem;
+      margin-bottom: 2.125rem;
+      text-align: left; } }
   @media (min-width: 62em) {
     h2 {
       font-size: 2rem;
@@ -106,14 +112,42 @@ h2 {
     font-weight: 600; }
 
 h3 {
-  font-size: 1.5rem;
+  font-size: 1.375rem;
   margin-bottom: 1rem;
   color: #272727; }
+  @media (min-width: 40em) {
+    h3 {
+      font-size: 1.375rem;
+      margin-bottom: 1rem; } }
+  @media (min-width: 47em) {
+    h3 {
+      font-size: 1.625rem;
+      margin-bottom: 1rem; } }
+  @media (min-width: 62em) {
+    h3 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem; } }
+  @media (min-width: 73em) {
+    h3 {
+      font-size: 1.5rem;
+      margin-bottom: 1rem; } }
 
 h4 {
   font-size: 2.25rem;
   margin-bottom: 5.625rem;
   color: #272727; }
+  @media (min-width: 28.5em) {
+    h4 {
+      font-size: 1.5rem; } }
+  @media (min-width: 40em) {
+    h4 {
+      font-size: 1.5rem; } }
+  @media (min-width: 47em) {
+    h4 {
+      font-size: 1.5rem; } }
+  @media (min-width: 62em) {
+    h4 {
+      font-size: 1.5rem; } }
 
 h5 {
   font-size: 2.25rem;
@@ -4741,49 +4775,60 @@ img {
 /*=================================================================================================================================================================================================
                                                                                             Slider Header
 ================================================================================================= | =============================================================================================*/
-.header-slider, .slick-list {
+.header-slider {
   display: none; }
+  .header-slider .slick-list .slick-track {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row;
+            flex-flow: row; }
+    .header-slider .slick-list .slick-track .box {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: horizontal;
+      -webkit-box-direction: normal;
+          -ms-flex-flow: row nowrap;
+              flex-flow: row nowrap;
+      -webkit-box-align: center;
+          -ms-flex-align: center;
+              align-items: center;
+      background-size: cover;
+      background-position: 0 0; }
+      .header-slider .slick-list .slick-track .box .row {
+        margin-bottom: 0; }
+        .header-slider .slick-list .slick-track .box .row .col {
+          margin-bottom: 0; }
+      .header-slider .slick-list .slick-track .box h2, .header-slider .slick-list .slick-track .box p {
+        color: #ebebeb;
+        -webkit-font-smoothing: antialiased !important;
+        text-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.005);
+        text-align: left; }
+      .header-slider .slick-list .slick-track .box h2 {
+        font-size: 1.75rem;
+        padding: 0;
+        margin-bottom: 1.125rem;
+        line-height: 100%; }
+      .header-slider .slick-list .slick-track .box p {
+        font-size: 0.875rem; }
+      .header-slider .slick-list .slick-track .box img {
+        height: 100%;
+        width: auto;
+        max-height: 8.625rem !important; }
   @media (min-width: 62em) {
-    .header-slider, .slick-list {
+    .header-slider {
       display: block;
       z-index: 10;
       -webkit-box-align: center;
           -ms-flex-align: center;
               align-items: center;
-      margin-bottom: 3rem; } }
-  .header-slider .box, .slick-list .box {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background-size: cover;
-    background-position: 0 0;
-    height: 320px;
-    padding: 18px 0; }
-    @media (min-width: 40em) {
-      .header-slider .box, .slick-list .box {
-        height: 230px; } }
-    @media (min-width: 47em) {
-      .header-slider .box, .slick-list .box {
-        padding: 36px 0; } }
-    @media (min-width: 62em) {
-      .header-slider .box, .slick-list .box {
-        padding: 72px 0; } }
-  .header-slider .box-1, .slick-list .box-1 {
-    background-image: url("assets/images/slider-3.png"); }
-    .header-slider .box-1 .wordpress-logo, .slick-list .box-1 .wordpress-logo {
-      display: none; }
-      @media (min-width: 62em) {
-        .header-slider .box-1 .wordpress-logo, .slick-list .box-1 .wordpress-logo {
-          display: inherit;
-          font-size: 7.5rem;
-          color: #272727; } }
-  .header-slider .box-2, .slick-list .box-2 {
-    background-image: url("assets/images/slider-2.png"); }
-  .header-slider .box-3, .slick-list .box-3 {
-    background-image: url("assets/images/slider-1.png"); }
+      margin-bottom: 3rem;
+      background: -webkit-gradient(linear, right top, left top, from(#1e2c43), to(#162030));
+      background: linear-gradient(-90deg, #1e2c43 0%, #162030 100%);
+      height: 256px !important; } }
 
 /*=================================================================================================================================================================================================
                                                                                                 Basis
@@ -5414,9 +5459,6 @@ nachhacken wieso es geht.
         .leistungenKurzblick .bottomBar p {
           font-size: 1.875rem; } }
 
-.visuellAnsprechend p {
-  text-align: left; }
-
 .visuellAnsprechend .row.r1 > :nth-child(2) {
   -webkit-box-ordinal-group: 4;
       -ms-flex-order: 3;
@@ -6004,6 +6046,9 @@ ul.leistungen {
 /*=================================================================================================================================================================================================
                                                                                             Global Classes
 ================================================================================================= | =============================================================================================*/
+.bold {
+  font-weight: bold; }
+
 .greenBar {
   padding-left: 1.6875rem; }
   .greenBar:after {
